--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,8 @@ fabric.properties
 # End of https://www.gitignore.io/api/intellij
 
 test/other/
+
+# Jekyll
+docs/_site
+docs/.sass-cache/
+docs/.jekyll-metadata
