Changed title of index in website

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: Challenges-in-Java
+title: Challenges in Java
 description: Coding challenges in java solved, tested and commented
 show_downloads: false
 # google_analytics:
