Fixed bug with return to home page link in post

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,4 +6,5 @@ theme: jekyll-theme-minimal
 author: mborzenkov
 author_email: mborzenkov-dev@yandex.ru
 repository: mborzenkov/Challenges-in-Java
+url: https://mborzenkov.github.io/Challenges-in-Java/
 exclude: [ demo.md ]
